Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.7-dev
---------------

Not yet released.

- Fixed `issue #83 <https://github.com/jfinkels/flask-restless/issues/83>`_:
  allow :http:request:`post` requests with one-to-one related instances.
- Fixed `issue #79 <https://github.com/jfinkels/flask-restless/issues/79>`_:
  attempted to access attribute of ``None`` in constructor of
  :class:`APIManager`.

Version 0.6
-----------

Released on June 20, 2012.

- Added ``post_form_preprocessor`` keyword argument to
  :meth:`APIManager.create_api`; see `issue #74
  <https://github.com/jfinkels/flask-restless/pull/74>`_.
- Fixed `issue #77 <https://github.com/jfinkels/flask-restless/pull/77>`_:
  validation errors are now correctly handled on :http:method:`PATCH` requests.
- Added support for accessing model instances via arbitrary primary keys,
  instead of requiring an integer column named ``id``.
- Added example which uses curl as a client.
- Added support for pagination of responses.
- Fixed issue due to symbolic link from :file:`README` to :file:`README.md`
  when running ``pip bundle foobar Flask-Restless``.
- Separated API blueprint creation from registration, using
  :meth:`APIManager.create_api` and :meth:`APIManager.create_api_blueprint`.
- Added support for pure SQLAlchemy in addition to Flask-SQLAlchemy.

Version 0.5
-----------

Released on April 10, 2012.

- Dual-licensed under GNU AGPLv3+ and 3-clause BSD license.
- Added capturing of exceptions raised during field validation.
- Added :file:`examples/separate_endpoints.py`, showing how to create separate
  API endpoints for a single model.
- Added ``include_columns`` keyword argument to
  :meth:`~flask_restless.APIManager.create_api` method to allow users to