@@ -290,6 +290,16 @@ class APITestCase(TestSupport):
         inst = _to_dict(person, deep)
         self.assertEqual(loads(response.data), inst)
 
+    def test_post_nullable_date(self):
+        """Tests the creation of a model with a nullable date field."""
+        self.manager.create_api(self.Star, methods=['GET', 'POST'])
+        data = dict(inception_time=None)
+        response = self.app.post('/api/star', data=dumps(data))
+        self.assertEqual(response.status_code, 201)
+        response = self.app.get('/api/star/1')
+        self.assertEqual(response.status_code, 200)
+        self.assertEqual(loads(response.data)['inception_time'], None)
+
     def test_post_with_submodels(self):
         """Tests the creation of a model with a related field."""
         data = {'name': u'John', 'age': 2041,
