@@ -13,6 +13,9 @@ Version 0.7-dev
 
 Not yet released.
 
+- Fixed `issue #91 <https://github.com/jfinkels/flask-restless/issues/91>`_:
+  correctly handle :http:method:`post` requests to nullable
+  :class:`~sqlalchemy.DateTime` columns.
 - Fixed `issue #83 <https://github.com/jfinkels/flask-restless/issues/83>`_:
   allow :http:request:`post` requests with one-to-one related instances.
 - Fixed `issue #79 <https://github.com/jfinkels/flask-restless/issues/79>`_:
